--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -17,84 +17,97 @@
                      </tr>
                   </thead>
 
-                  <% renderApartment.forEach((apartment, index) => {%>
+                  <% for(let i = 0; i < renderApartment.length; i++) {%>
                   <tbody>
-                     <th class="text-center align-middle"><%= index+1 %></th>
-                     <td class="text-center align-middle"><%= apartment.region %></td>
-                     <td class="text-center align-middle"><%= apartment.heading%></td>
-                     <td class="text-center align-middle"><%= apartment.price %></td>
+                     <th class="text-center align-middle"><%= i+1 %></th>
+                     <td class="text-center align-middle"><%= renderApartment[i].region %></td>
+                     <td class="text-center align-middle"><%= renderApartment[i].heading%></td>
+                     <td class="text-center align-middle"><%= renderApartment[i].price %></td>
                      <td class="text-center align-middle">
                         <button class="btn btn-primary edit" data-toggle="modal" data-target="#editModal">Sửa</button>
-                        <a href="/dashboard/delete?id=<%= apartment._id %>" class="btn btn-danger">Xóa</a>
+                        <a href="/dashboard/delete?id=<%= renderApartment[i]._id %>" class="btn btn-danger">Xóa</a>
                      </td>
                   </tbody>
-                  <% }) %>
+                  <!-- EDIT Modal -->
+                  <div
+                     class="modal fade"
+                     id="editModal"
+                     tabindex="1"
+                     role="dialog"
+                     aria-labelledby="exampleModalLabel"
+                     aria-hidden="true"
+                  >
+                     <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                           <div class="modal-header text-center align-center">
+                              <h5 class="modal-title" id="exampleModalLabel">Edit upload</h5>
+                              <button type="button" class="close bg-danger p-2" data-dismiss="modal" aria-label="Close">
+                                 <span aria-hidden="true">&times;</span>
+                              </button>
+                           </div>
+                           <div class="modal-body">
+                              <form action="/dashboard/updateApartment/<%= renderApartment[i].id %>" method="POST">
+                                 <div class="form-group">
+                                    <h5>Khu vực</h5>
+                                    <label for="">Vùng</label>
+                                    <select name="region" class="form-control">
+                                       <option value="Miền Bắc">Miền Bắc</option>
+                                       <option value="Miền Trung">Miền Trung</option>
+                                       <option value="Miền Nam">Miền Nam</option>
+                                    </select>
+                                    <input class="form-control" name="city" type="text" placeholder="Thành phố" />
+                                    <input class="form-control" name="district" type="text" placeholder="Quận/Huyện" />
+                                    <input class="form-control" name="ward" type="text" placeholder="Phường xã" />
+                                    <input class="form-control" name="address" type="text" placeholder="Số nhà" />
+                                    <input class="form-control" name="beach" type="text" placeholder="Bãi Biển" />
+                                 </div>
+                                 <div class="form-group">
+                                    <label for="">Tiêu đề</label>
+                                    <input class="form-control" name="heading" type="text" />
+                                 </div>
+                                 <div class="form-group">
+                                    <label for="">Thông tin mô tả</label>
+                                    <textarea
+                                       class="form-control"
+                                       name="description"
+                                       id=""
+                                       cols="30"
+                                       rows="5"
+                                    ></textarea>
+                                 </div>
+                                 <div class="form-group">
+                                    <label for="">Giá căn hộ</label>
+                                    <input class="form-control" name="price" type="text" />
+                                 </div>
+                                 <div class="form-group">
+                                    <label for="">Diện tích căn hộ</label>
+                                    <input class="form-control" name="acreage" type="text" />
+                                 </div>
+                                 <div class="form-group">
+                                    <label for="formFileMultiple" class="form-label">Chọn ảnh phòng</label>
+                                    <input
+                                       class="form-control"
+                                       name="files"
+                                       type="file"
+                                       id="formFileMultiple"
+                                       multiple
+                                    />
+                                 </div>
+                              </form>
+                           </div>
+                           <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="submit" class="btn btn-primary">Save changes</button>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <% } %>
                </table>
             </div>
          </div>
       </div>
-      <!-- EDIT Modal -->
-      <div
-         class="modal fade"
-         id="editModal"
-         tabindex="1"
-         role="dialog"
-         aria-labelledby="exampleModalLabel"
-         aria-hidden="true"
-      >
-         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-               <div class="modal-header text-center align-center">
-                  <h5 class="modal-title" id="exampleModalLabel">Edit upload</h5>
-                  <button type="button" class="close bg-danger p-2" data-dismiss="modal" aria-label="Close">
-                     <span aria-hidden="true">&times;</span>
-                  </button>
-               </div>
-               <div class="modal-body">
-                  <form>
-                     <div class="form-group">
-                        <h5>Khu vực</h5>
-                        <label for="">Vùng</label>
-                        <select name="region" class="form-control">
-                           <option value="Miền Bắc">Miền Bắc</option>
-                           <option value="Miền Trung">Miền Trung</option>
-                           <option value="Miền Nam">Miền Nam</option>
-                        </select>
-                        <input class="form-control" name="city" type="text" placeholder="Thành phố" />
-                        <input class="form-control" name="district" type="text" placeholder="Quận/Huyện" />
-                        <input class="form-control" name="ward" type="text" placeholder="Phường xã" />
-                        <input class="form-control" name="address" type="text" placeholder="Số nhà" />
-                        <input class="form-control" name="beach" type="text" placeholder="Bãi Biển" />
-                     </div>
-                     <div class="form-group">
-                        <label for="">Tiêu đề</label>
-                        <input class="form-control" name="heading" type="text" />
-                     </div>
-                     <div class="form-group">
-                        <label for="">Thông tin mô tả</label>
-                        <textarea class="form-control" name="description" id="" cols="30" rows="5"></textarea>
-                     </div>
-                     <div class="form-group">
-                        <label for="">Giá căn hộ</label>
-                        <input class="form-control" name="price" type="text" />
-                     </div>
-                     <div class="form-group">
-                        <label for="">Diện tích căn hộ</label>
-                        <input class="form-control" name="acreage" type="text" />
-                     </div>
-                     <div class="form-group">
-                        <label for="formFileMultiple" class="form-label">Chọn ảnh phòng</label>
-                        <input class="form-control" name="files" type="file" id="formFileMultiple" multiple />
-                     </div>
-                  </form>
-               </div>
-               <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-               </div>
-            </div>
-         </div>
-      </div>
+
       <!-- DELETE modal  -->
       <!-- Modal -->
       <div
