--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -154,7 +154,7 @@
             </div>
          </div>
       </div>
-
+      <%- include('../layouts/message') %>
       <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
       <!-- Initialize Swiper -->
