--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -219,6 +219,7 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top">
          <i class="fa-solid fa-caret-up"></i>
       </button>
+      <%- include('../layouts/message') %> <%- include('../layouts/footer')%>
       <script>
          // Get the button:
          let mybutton = document.getElementById('myBtn');
@@ -238,10 +239,8 @@
 
          // When the user clicks on the button, scroll to the top of the document
          function topFunction() {
-            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+            document.documentElement.scrollTop = 0;
          }
       </script>
-
-      <%- include('../layouts/footer')%>
    </body>
 </html>
