--- a/views/admin.layouts/sidebar.ejs
+++ b/views/admin.layouts/sidebar.ejs
@@ -38,9 +38,15 @@
             </a>
          </li>
          <li class="">
-            <a href="/dashboard/notification" class="sidebar-menu_notification">
+            <a href="/dashboard/message" class="sidebar-menu_message">
                <span class="las la-clipboard-list"></span>
-               <span>Thông báo</span>
+               <span>Tin nhắn</span>
+            </a>
+         </li>
+         <li class="">
+            <a href="/dashboard/contact" class="sidebar-menu_contact">
+               <span class="las la-clipboard-list"></span>
+               <span>Liên Hệ</span>
             </a>
          </li>
          <li class="">
