--- a/views/components/analysis.ejs
+++ b/views/components/analysis.ejs
@@ -19,12 +19,12 @@
                <div class="login-form">
                   <h1>Bảng Phân Tích</h1>
                   <div class="input-box">
-                     <span> Giá Trị Căn Hộ </span>
+                     <label> Giá Trị Căn Hộ </label>
                      <input class="" type="number" placeholder="VND" name="price" value="<%= apartment.price%>" />
                   </div>
 
                   <div class="input-box">
-                     <label for="">Tiến Độ Thanh Toán</label>
+                     <label>Tiến Độ Thanh Toán</label>
                      <select name="type" class="form-control">
                         <option value="normal">Tiến Độ Thường</option>
                         <option value="70">70%</option>
