--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -23,13 +23,22 @@
          <div>Comments</div>
       </div>
       <div>
+         <span class="las la-comment-dots"></span>
+      </div>
+   </a>
+   <a href="/dashboard/message" class="card-single">
+      <div>
+         <h1><%= numOfMessage%></h1>
+         <div>Tin nhắn</div>
+      </div>
+      <div>
          <span class="las la-comment"></span>
       </div>
    </a>
-   <a href="/dashboard/notification" class="card-single">
+   <a href="/dashboard/contact" class="card-single">
       <div>
          <h1>65</h1>
-         <div>Notifications</div>
+         <div>Liên hệ</div>
       </div>
       <div>
          <span class="las la-clipboard-list"></span>
