--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -37,7 +37,7 @@
    </a>
    <a href="/dashboard/contact" class="card-single">
       <div>
-         <h1>65</h1>
+         <h1><%= numOfContact %></h1>
          <div>Liên hệ</div>
       </div>
       <div>
