--- a/views/admin/message.ejs
+++ b/views/admin/message.ejs
@@ -5,6 +5,11 @@
       <div class="card">
          <div class="card-header">
             <h4>Quản lý tin nhắn</h4>
+            <form>
+               <div class="search-wrapper">
+                  <input type="text" placeholder="Tìm kiếm" name="search" />
+               </div>
+            </form>
          </div>
          <div class="card-body">
             <table class="table table-bordered">
@@ -20,19 +25,22 @@
                   </tr>
                </thead>
 
+               <% for(let i = 0; i < message.length; i++) {%>
                <tbody>
-                  <% for(let i = 0; i < message.length; i++) {%>
                   <th class="text-center align-middle"><%= i+1 %></th>
                   <td class="text-center align-middle"><%= message[i].email %></td>
                   <td class="text-center align-middle"><%= message[i].phonenumber %></td>
                   <td class="text-center align-middle"><%= message[i].username %></td>
                   <td class="text-center align-middle text-wrap"><%= message[i].content %></td>
-                  <td class="text-center align-middle text-nowrap"><%= message[i].createdAt.toLocaleDateString() %></td>
+                  <td class="text-center align-middle text-nowrap">
+                     <%= message[i].createdAt.toLocaleTimeString() %><br /><%= message[i].createdAt.toLocaleDateString()
+                     %>
+                  </td>
                   <td class="text-center align-middle">
                      <a href="/dashboard/deletemess?id=<%= message[i]._id %>" class="btn btn-danger">Xóa</a>
                   </td>
-                  <% } %>
                </tbody>
+               <% } %>
             </table>
          </div>
       </div>
