--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -4,6 +4,11 @@
          <div class="card">
             <div class="card-header">
                <h4>Quản lý đăng tin</h4>
+               <form>
+                  <div class="search-wrapper">
+                     <input type="text" placeholder="Tìm kiếm" name="search" />
+                  </div>
+               </form>
             </div>
             <div class="card-body">
                <table class="table">
