--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -142,7 +142,7 @@
 }
 
 .search-wrapper {
-   border: 1px solid #ccc;
+   border: 2px solid #000;
    border-radius: 30px;
    height: 48px;
    display: flex;
@@ -158,10 +158,16 @@
 }
 
 .search-wrapper input {
+   background-color: var(--text-gray);
+   color: #000;
    height: 100%;
-   padding: 0.5rem;
+   padding-left: 20px;
    border: none;
    outline: none;
+}
+
+::placeholder {
+   color: rgb(255, 255, 255);
 }
 
 .user-wrapper {
