--- a/views/admin/contact.ejs
+++ b/views/admin/contact.ejs
@@ -20,19 +20,24 @@
                   </tr>
                </thead>
 
+               <% for(let i = 0; i < contact.length; i++) {%>
                <tbody>
-                  <% for(let i = 0; i < message.length; i++) {%>
                   <th class="text-center align-middle"><%= i+1 %></th>
-                  <td class="text-center align-middle"><%= message[i].email %></td>
-                  <td class="text-center align-middle"><%= message[i].phonenumber %></td>
-                  <td class="text-center align-middle"><%= message[i].username %></td>
-                  <td class="text-center align-middle text-wrap"><%= message[i].content %></td>
-                  <td class="text-center align-middle text-nowrap"><%= message[i].createdAt.toLocaleDateString() %></td>
-                  <td class="text-center align-middle">
-                     <a href="/dashboard/deletemess?id=<%= message[i]._id %>" class="btn btn-danger">Xóa</a>
+                  <td class="text-center align-middle"><%= contact[i].email %></td>
+                  <td class="text-center align-middle"><%= contact[i].phonenumber %></td>
+                  <td class="text-center align-middle"><%= contact[i].fullname %></td>
+                  <td class="text-center align-middle text-wrap">
+                     Người dùng cần tư vấn về căn hộ <br /><%= contact[i].apartmentname %>
                   </td>
-                  <% } %>
+                  <td class="text-center align-middle text-nowrap">
+                     <%= contact[i].createdAt.toLocaleTimeString() %><br /><%= contact[i].createdAt.toLocaleDateString()
+                     %>
+                  </td>
+                  <td class="text-center align-middle">
+                     <a href="/dashboard/deleteContact?id=<%= contact[i]._id %>" class="btn btn-danger">Xóa</a>
+                  </td>
                </tbody>
+               <% } %>
             </table>
          </div>
       </div>
